--- a/package.json
+++ b/package.json
@@ -2,22 +2,16 @@
   "name": "justchatting",
   "version": "0.1.0",
   "description": "Create groups and chatting",
-  "main": "app.js",
-  "scripts": {
-    "start": "cross-env NODE_ENV=production node server/app.js",
-    "server": "nodemon server/app.js",
-    "client": "npm run serve --prefix client",
-    "client:install": "npm install --prefix client",
-    "client:build": "npm run build --prefix client",
-    "dev": "cross-env NODE_ENV=development concurrently \"npm run server\" \"npm run client\""
-  },
   "author": "ZipLant",
-  "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^5.2.0",
-    "cross-env": "^7.0.2",
-    "nodemon": "^2.0.3"
+  "scripts": {
+    "client": "npm run serve --prefix client",
+    "client:build": "npm run build --prefix client",
+    "client:install": "npm install --prefix client",
+    "dev": "cross-env NODE_ENV=development concurrently \"npm run server\" \"npm run client\"",
+    "server": "nodemon server/app.js",
+    "start": "cross-env NODE_ENV=production node server/app.js"
   },
+  "main": "app.js",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
@@ -28,6 +22,17 @@
     "mariadb": "^2.4.2",
     "multer": "^1.4.2",
     "sequelize": "^6.3.4",
-    "socket.io": "^2.3.0"
-  }
+    "socket.io": "^2.3.0",
+    "vuetify": "^2.2.11"
+  },
+  "devDependencies": {
+    "concurrently": "^5.2.0",
+    "cross-env": "^7.0.2",
+    "nodemon": "^2.0.3",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vuetify-loader": "^1.3.0"
+  },
+  "license": "ISC"
 }
