--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "materialize-css": "^1.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue-socket.io-next": "^1.1.1",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
